Add JobStore + modify getJobs endpoint
