# ReactApp1.Server/swagger.json
@@ -16,6 +16,16 @@
           "application/json",
           "text/json"
         ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "jobTags",
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -29,7 +39,7 @@
         }
       }
     },
-    "/jobs/{id}": {
+    "/jobs/GetJobsWithFilter": {
       "get": {
         "tags": [
           "JobsListing"
@@ -41,9 +51,8 @@
         ],
         "parameters": [
           {
-            "in": "path",
+            "in": "query",
             "name": "id",
-            "required": true,
             "type": "integer",
             "format": "int32"
           }
